log
Thu 09 May 2024 03:57:41 PM UTC: 
 treemap.c | 95 ++++++++++++++++++++++++++++++++++++++++++---------------------
 1 file changed, 63 insertions(+), 32 deletions(-)
 tests:  0|0
8c0227a
Thu 09 May 2024 03:59:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
738411b
Thu 09 May 2024 04:00:50 PM UTC: 
 treemap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  4|7
total_score: 5/70
641e2af
Thu 09 May 2024 04:02:27 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
6b3ac60
Thu 09 May 2024 04:03:56 PM UTC: 
 treemap.c | 66 +++++++++++++++++++++++++++++++++------------------------------
 1 file changed, 35 insertions(+), 31 deletions(-)
 tests:  6|6
total_score: 15/70
cab820c
Thu 09 May 2024 04:06:17 PM UTC: 
 treemap.c | 45 ++++++++++++++++++++-------------------------
 1 file changed, 20 insertions(+), 25 deletions(-)
 tests:  8|5
total_score: 15/70
613f280
Thu 09 May 2024 04:07:36 PM UTC: 
 treemap.c | 53 ++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 52 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:92:10: error: ‘removeNode’ defined but not used [-Werror=unused-function]
   92 |     void removeNode(TreeMap *tree, TreeNode *node) {
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4e728b5
Thu 09 May 2024 04:08:02 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  8|5
total_score: 15/70
def7186
Thu 09 May 2024 04:12:24 PM UTC: 
 treemap.c | 64 +++++++++++++++------------------------------------------------
 1 file changed, 15 insertions(+), 49 deletions(-)
 tests:  15|4
total_score: 25/70
79fe229
Thu 09 May 2024 04:14:40 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
9332435
Sat 11 May 2024 10:30:07 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:135:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  135 |   return aux; }
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
a2e450a
Sat 11 May 2024 10:30:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 35/70
61a8e53
Sat 11 May 2024 10:44:52 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  19|3
total_score: 35/70
f0a1bab
Sat 11 May 2024 10:57:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|3
total_score: 35/70
b3840f8
Sat 11 May 2024 10:58:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|3
total_score: 35/70
7e5fd15
Sat 11 May 2024 10:59:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|3
total_score: 35/70
9295b73
Sat 11 May 2024 11:12:06 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  19|3
total_score: 35/70
32dc309
